--- a/PushUps/Base.lproj/Main.storyboard
+++ b/PushUps/Base.lproj/Main.storyboard
@@ -224,13 +224,69 @@
                     <view key="view" contentMode="scaleToFill" id="4Zj-Vu-08c">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jHm-zu-Z3v">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="KFf-MU-KnS"/>
+                                    <constraint firstAttribute="width" constant="100" id="TvG-R2-2qS"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LIb-2s-G9d">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="4u6-IA-6F2"/>
+                                    <constraint firstAttribute="width" constant="35" id="Y9s-O0-97G"/>
+                                </constraints>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Etk-So-4f4">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="VKy-FP-tML"/>
+                                    <constraint firstAttribute="height" constant="35" id="bOR-sk-S0v"/>
+                                </constraints>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KmB-8H-KHc">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0qK-pN-WnP">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="UFw-BT-VRD"/>
+                                    <constraint firstAttribute="height" constant="90" id="atf-mo-vgO"/>
+                                </constraints>
+                                <state key="normal" image="profileImage"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pushup Pro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFD-LT-Bth">
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="0.31764705879999999" green="0.83137254900000002" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="0qK-pN-WnP" firstAttribute="centerY" secondItem="jHm-zu-Z3v" secondAttribute="centerY" id="247-1y-SeH"/>
+                            <constraint firstItem="jHm-zu-Z3v" firstAttribute="top" secondItem="4DK-Vz-4dI" secondAttribute="bottom" constant="8" id="ALy-tf-Sef"/>
+                            <constraint firstItem="jHm-zu-Z3v" firstAttribute="leading" secondItem="Etk-So-4f4" secondAttribute="trailing" constant="32" id="BkR-EG-Dx6"/>
+                            <constraint firstItem="LIb-2s-G9d" firstAttribute="leading" secondItem="jHm-zu-Z3v" secondAttribute="trailing" constant="32" id="C7Y-w0-E89"/>
+                            <constraint firstItem="0qK-pN-WnP" firstAttribute="centerX" secondItem="jHm-zu-Z3v" secondAttribute="centerX" id="Fm0-Fi-tt5"/>
+                            <constraint firstItem="jHm-zu-Z3v" firstAttribute="centerX" secondItem="4Zj-Vu-08c" secondAttribute="centerX" id="U0y-FN-AYp"/>
+                            <constraint firstItem="cFD-LT-Bth" firstAttribute="centerX" secondItem="jHm-zu-Z3v" secondAttribute="centerX" id="WPI-am-Wir"/>
+                            <constraint firstItem="cFD-LT-Bth" firstAttribute="top" secondItem="jHm-zu-Z3v" secondAttribute="bottom" constant="8" id="ZYZ-b9-gUD"/>
+                            <constraint firstItem="KmB-8H-KHc" firstAttribute="leading" secondItem="4Zj-Vu-08c" secondAttribute="leading" id="dim-8p-5M9"/>
+                            <constraint firstAttribute="trailing" secondItem="KmB-8H-KHc" secondAttribute="trailing" id="fgw-qb-LjX"/>
+                            <constraint firstItem="LIb-2s-G9d" firstAttribute="centerY" secondItem="jHm-zu-Z3v" secondAttribute="centerY" id="k08-12-8GR"/>
+                            <constraint firstItem="KmB-8H-KHc" firstAttribute="top" secondItem="cFD-LT-Bth" secondAttribute="bottom" constant="16" id="ksF-Da-TuR"/>
+                            <constraint firstItem="Jmc-en-u0v" firstAttribute="top" secondItem="KmB-8H-KHc" secondAttribute="bottom" id="lzD-KG-bS8"/>
+                            <constraint firstItem="Etk-So-4f4" firstAttribute="centerY" secondItem="jHm-zu-Z3v" secondAttribute="centerY" id="sOA-WC-vtO"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MN0-dQ-hha"/>
+                    <connections>
+                        <outlet property="profilePictureBackgroundView" destination="jHm-zu-Z3v" id="qaG-b3-98A"/>
+                        <outlet property="profilePictureImageView" destination="0qK-pN-WnP" id="qeM-Rz-TXV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cE6-yg-agw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3420" y="-575"/>
+            <point key="canvasLocation" x="3420" y="-575.26236881559225"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="I2f-Jb-mzt">
@@ -636,4 +692,7 @@
             <point key="canvasLocation" x="148" y="-1118"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="profileImage" width="100" height="100"/>
+    </resources>
 </document>
