--- a/PushUps/Base.lproj/Main.storyboard
+++ b/PushUps/Base.lproj/Main.storyboard
@@ -209,7 +209,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jbw-ao-T59" id="Ul7-Na-v3D">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2uq-KG-7Rn">
@@ -1483,8 +1483,8 @@
                                     <mask key="constraints">
                                         <exclude reference="d9N-SJ-29V"/>
                                         <exclude reference="2fB-ym-u9L"/>
-                                        <exclude reference="QeS-Ra-eE8"/>
                                         <exclude reference="LVO-rN-Rga"/>
+                                        <exclude reference="QeS-Ra-eE8"/>
                                         <exclude reference="pkT-Co-jjS"/>
                                     </mask>
                                 </variation>
@@ -1538,6 +1538,6 @@
         <image name="shareIcon" width="19" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="syQ-6k-MOo"/>
+        <segue reference="AuZ-to-vzi"/>
     </inferredMetricsTieBreakers>
 </document>
